# AoC2019

./: .gitignore  README.md  cabal.project  day1_1.hs  day2.hs  day2.rs  day3.hs  day4.hs  day5.hs  day5.py  day6.hs
.github/workflows/: haskell.yml
01/: day1.cabal  day1.hs
02/: day2.cabal  day2.hs  day2.py
03/: day3.cabal
04/: day4.cabal
05/: LICENSE  day5.cabal  day5.hs  day5.py
06/: day6.cabal
07/: day7.cabal  day7.hs
08/: day8.cabal  day8.hs  day8.py  run.sh
09/: day9.cabal  day9.hs
10/: day10.cabal  day10.hs
11/: day11.cabal  day11.hs
11/12/: day12.cabal
12/: day12.hs  day12.py
13/: day13.cabal  day13.hs
14/: day14.cabal  day14.hs
15/: CHANGELOG.md  LICENSE  day15.cabal  day15.hs
16/: CHANGELOG.md  day16.cabal  day16.hs
17/: day17.cabal  day17.hs  hay17.hs
18/: day18.py
19/: CHANGELOG.md  day19.cabal  day19.hs
20/: CHANGELOG.md  day20.cabal  day20.in  day20.py
21/: CHANGELOG.md  day21.cabal  day21.hs
22/: CHANGELOG.md  day22.cabal  day22.hs
23/: CHANGELOG.md  day23.cabal  day23.hs  day23.out
24/: CHANGELOG.md  day24.cabal  day24.hs
25/: CHANGELOG.md  day25.cabal  day25.hs
intcode/: ChangeLog.md  intcode.cabal
intcode/src/: HSpecTests.hs  Intcode.hs
