cabal-version:       2.4

name:                day3
version:             0.1.0.0
synopsis:            Day 3 - Crossed Wires
homepage:            https://github.com/alf239/AoC2019
license:             MIT
license-file:        LICENSE
author:              Alexey Filippov
maintainer:          afilippov@acm.org
category:            Game
extra-source-files:  CHANGELOG.md

executable day3
  main-is:             day3.hs
  build-depends:       base >= 4.12,
                       split
  default-language:    Haskell2010
