cabal-version:       2.4

name:                day4
version:             0.1.0.0
synopsis:            Day 4 - Secure Container
homepage:            https://github.com/alf239/AoC2019
license:             MIT
license-file:        LICENSE
author:              Alexey Filippov
maintainer:          afilippov@acm.org
category:            Game
extra-source-files:  CHANGELOG.md

executable day4
  main-is:             day4.hs
  build-depends:       base >= 4.12
  default-language:    Haskell2010
