cabal-version:       2.4

name:                day6
version:             0.1.0.0
synopsis:            Day 6 - Universal Orbit Map
homepage:            https://github.com/alf239/AoC2019
license:             MIT
license-file:        LICENSE
author:              Alexey Filippov
maintainer:          afilippov@acm.org
category:            Game
extra-source-files:  CHANGELOG.md

executable day6
  main-is:             day6.hs
  build-depends:       base >= 4.12,
                       containers,
                       split
  default-language:    Haskell2010
